--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,9 +43,9 @@ html {
 }
 
 body {
-    background-color: #5050f5;
-    background: -webkit-gradient(linear, left top, left bottom, from(#9d2bf3), to(#5050f5));
-    background: linear-gradient(#9d2bf3, #5050f5);
+    background-color: #0ba376;
+    background: -webkit-gradient(linear, left top, left bottom, from(#0b7080), to(#0ba376));
+    background: linear-gradient(#0b7080, #0ba376);
     margin: 0;
     width: 100%;
     height: 100%;
@@ -152,7 +152,7 @@ input[type="submit"],
     line-height: 1.2;
     border: 0;
     outline: 0;
-    border: 2px solid #5050f5;
+    border: 2px solid #0ba376;
     color: #f5f5f5;
     text-shadow: none;
     background-color: transparent;
@@ -183,9 +183,9 @@ input[type="button"]:hover,
 input[type="button"]:focus,
 input[type="submit"]:hover,
 input[type="submit"]:focus {
-    background-color: #5050f5;
+    background-color: #0ba376;
     color: #fff;
-    border: 2px solid #5050f5;
+    border: 2px solid #0ba376;
 }
 
 .btn-secondary {
@@ -245,7 +245,7 @@ input[type="submit"]:focus {
     width: 52px;
     height: 52px;
     margin: 100px auto;
-    background-color: #5050f5;
+    background-color: #0ba376;
 
     border-radius: 100%;
     -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
@@ -325,7 +325,7 @@ input[type="submit"]:focus {
     ul.main-menu a.active,
     ul.main-menu a:focus,
     ul.main-menu a:hover {
-        color: #5050f5;
+        color: #0ba376;
     }
 
     ul.main-menu .menu-icon {
@@ -340,7 +340,7 @@ input[type="submit"]:focus {
         opacity: 0;
         color: #fff;
         padding: 2px 10px;
-        background-color: #5050f5;
+        background-color: #0ba376;
         white-space: nowrap;
         right: 0;
         top: -50%;
@@ -393,14 +393,14 @@ input[type="submit"]:focus {
 }
 
 .lmpixels-arrows-nav div:hover {
-    color: #5050f5;
+    color: #0ba376;
 }
 /* --- End LMPixels Arrow Nav --- */
 
 .header-photo {
     position: relative;
     width: 180px;
-    margin: 0 auto 15px;
+    margin: 0 auto 30px;
     z-index: 1;
 }
 
@@ -490,7 +490,7 @@ input[type="submit"]:focus {
 
 .header-buttons .btn-primary:hover {
     background-color: #fff;
-    color: #5050f5;
+    color: #0ba376;
     border-color: #fff;
 }
 
@@ -601,7 +601,7 @@ input[type="submit"]:focus {
 }
 
 .ps:hover>.ps__scrollbar-y-rail:hover>.ps__scrollbar-y {
-    background-color: #5050f5;
+    background-color: #0ba376;
 }
 
 .ps>.ps__scrollbar-y-rail {
@@ -619,7 +619,7 @@ input[type="submit"]:focus {
 }
 
 .ps:hover.ps--in-scrolling.ps--y>.ps__scrollbar-y-rail>.ps__scrollbar-y {
-    background-color: #5050f5;
+    background-color: #0ba376;
 }
 /* --- End Custom ScrollBar Customization --- */
 
@@ -638,7 +638,7 @@ input[type="submit"]:focus {
 }
 
 .page-title h2 span {
-    color: #5050f5;
+    color: #0ba376;
 }
 
 .page-title:after {
@@ -649,9 +649,9 @@ input[type="submit"]:focus {
     content: '';
     height: 30px;
     width: 50px;
-    background-image: -webkit-repeating-radial-gradient(center center, #5050f5, #5050f5 1px, transparent 0px, transparent 100%);
-    background-image: -moz-repeating-radial-gradient(center center, #5050f5, #5050f5 1px, transparent 0px, transparent 100%);
-    background-image: -ms-repeating-radial-gradient(center center, #5050f5, #5050f5 1px, transparent 0px, transparent 100%);
+    background-image: -webkit-repeating-radial-gradient(center center, #0ba376, #0ba376 1px, transparent 0px, transparent 100%);
+    background-image: -moz-repeating-radial-gradient(center center, #0ba376, #0ba376 1px, transparent 0px, transparent 100%);
+    background-image: -ms-repeating-radial-gradient(center center, #0ba376, #0ba376 1px, transparent 0px, transparent 100%);
     -webkit-background-size: 6px 6px;
     -moz-background-size: 6px 6px;
     background-size: 6px 6px;
@@ -712,7 +712,7 @@ textarea.form-control, textarea.form-control:focus {
     top: 0;
     opacity: 0;
     background: transparent;
-    border: 2px solid #5050f5;
+    border: 2px solid #0ba376;
     border-right-width: 0;
     height: 100%;
     -webkit-transition: all 0.3s ease-in-out;
@@ -783,7 +783,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .form-group-with-icon.form-group-focus i {
-    color: #5050f5;
+    color: #0ba376;
 }
 
 .form-group.form-group-w-checkbox {
@@ -837,7 +837,7 @@ textarea.form-control, textarea.form-control:focus {
 
 .form-group .form-control:focus ~ label,
 .form-group.form-group-focus .form-control ~ label {
-    color: #5050f5;
+    color: #0ba376;
     top: -20px;
     left: 0;
     z-index: 1;
@@ -872,7 +872,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .block-title h3 span {
-    color: #5050f5;
+    color: #0ba376;
 }
 
 .block-title:after {
@@ -883,9 +883,9 @@ textarea.form-control, textarea.form-control:focus {
     content: '';
     height: 20px;
     width: 30px;
-    background-image: -webkit-repeating-radial-gradient(center center, #5050f5, #5050f5 1px, transparent 0px, transparent 100%);
-    background-image: -moz-repeating-radial-gradient(center center, #5050f5, #5050f5 1px, transparent 0px, transparent 100%);
-    background-image: -ms-repeating-radial-gradient(center center, #5050f5, #5050f5 1px, transparent 0px, transparent 100%);
+    background-image: -webkit-repeating-radial-gradient(center center, #0ba376, #0ba376 1px, transparent 0px, transparent 100%);
+    background-image: -moz-repeating-radial-gradient(center center, #0ba376, #0ba376 1px, transparent 0px, transparent 100%);
+    background-image: -ms-repeating-radial-gradient(center center, #0ba376, #0ba376 1px, transparent 0px, transparent 100%);
     -webkit-background-size: 6px 6px;
     -moz-background-size: 6px 6px;
     background-size: 6px 6px;
@@ -934,7 +934,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .info-list .title {
-    color: #5050f5;
+    color: #0ba376;
     margin-right: 5px;
     font-weight: 600;
 }
@@ -962,7 +962,7 @@ textarea.form-control, textarea.form-control:focus {
 .info-block-w-icon i {
     position: relative;
     font-size: 42px;
-    color: #5050f5;
+    color: #0ba376;
     opacity: .7;
 }
 /* --- End Info block with Icon --- */
@@ -991,7 +991,7 @@ textarea.form-control, textarea.form-control:focus {
 .lm-info-block i {
     position: relative;
     font-size: 33px;
-    color: #5050f5;
+    color: #0ba376;
     z-index: 1;
 }
 
@@ -1006,7 +1006,7 @@ textarea.form-control, textarea.form-control:focus {
     font-weight: 400;
     display: block;
     margin: 10px 0;
-    color: #5050f5;
+    color: #0ba376;
 }
 
 
@@ -1050,7 +1050,7 @@ textarea.form-control, textarea.form-control:focus {
     font-size: 30px;
     right: 0;
     top: 7px;
-    color: #5050f5;
+    color: #0ba376;
     opacity: .5;
 }
 
@@ -1153,8 +1153,8 @@ textarea.form-control, textarea.form-control:focus {
 .testimonials.owl-carousel .owl-nav .owl-next:hover,
 .clients.owl-carousel .owl-nav .owl-prev:hover,
 .clients.owl-carousel .owl-nav .owl-next:hover {
-    background-color: #5050f5;
-    border-color: #5050f5;
+    background-color: #0ba376;
+    border-color: #0ba376;
     color: #fff;
 }
 /* --- End of Sliders Nav --- */
@@ -1215,7 +1215,7 @@ textarea.form-control, textarea.form-control:focus {
     position: absolute;
     margin-left: -8px;
     border-radius: 10px;
-    background-color: #5050f5;
+    background-color: #0ba376;
     opacity: .25;
     z-index: 0;
 }
@@ -1230,7 +1230,7 @@ textarea.form-control, textarea.form-control:focus {
     margin-left: -4px;
     background-color: #222;
     border-radius: 5px;
-    border: 2px solid #5050f5;
+    border: 2px solid #0ba376;
     z-index: 1;
 }
 
@@ -1287,7 +1287,7 @@ textarea.form-control, textarea.form-control:focus {
     position: relative;
     display: inline-block;
     background-color: #222;
-    border: 1px solid #5050f5;
+    border: 1px solid #0ba376;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     border-radius: 8px;
@@ -1302,7 +1302,7 @@ textarea.form-control, textarea.form-control:focus {
 .skills-second-style .skill-container:before {
     content: '';
     position: absolute;
-    background-color: #5050f5;
+    background-color: #0ba376;
 }
 
 .skills-second-style .skill-value {
@@ -1315,7 +1315,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .skills-second-style .skill-percentage {
-    background-color: #5050f5;
+    background-color: #0ba376;
     border: 2px solid #222;
     -moz-border-radius: 9px;
     -webkit-border-radius: 9px;
@@ -1326,43 +1326,39 @@ textarea.form-control, textarea.form-control:focus {
 
 /* --- Skills Values --- */
 .skills-second-style .skill-container.skill-1 .skill-percentage {
-    width: 10%;
+    width: 95%;
 }
 
 .skills-second-style .skill-container.skill-2 .skill-percentage {
-    width: 20%;
+    width: 65%;
 }
 
 .skills-second-style .skill-container.skill-3 .skill-percentage {
-    width: 30%;
+    width: 80%;
 }
 
 .skills-second-style .skill-container.skill-4 .skill-percentage {
-    width: 40%;
+    width: 90%;
 }
 
 .skills-second-style .skill-container.skill-5 .skill-percentage {
-    width: 50%;
+    width: 95%;
 }
 
 .skills-second-style .skill-container.skill-6 .skill-percentage {
-    width: 60%;
+    width: 85%;
 }
 
 .skills-second-style .skill-container.skill-7 .skill-percentage {
-    width: 70%;
+    width: 100%;
 }
 
 .skills-second-style .skill-container.skill-8 .skill-percentage {
-    width: 80%;
+    width: 75%;
 }
 
 .skills-second-style .skill-container.skill-9 .skill-percentage {
     width: 90%;
-}
-
-.skills-second-style .skill-container.skill-10 .skill-percentage {
-    width: 100%;
 }
 
 /* --- End of Skills Values --- */
@@ -1394,7 +1390,7 @@ textarea.form-control, textarea.form-control:focus {
 
 .knowledges li {;
     display: inline-block;
-    background-color: #5050f5;
+    background-color: #0ba376;
     border-radius: 3px;
     color: #fff;
     padding: 1px 10px;
@@ -1617,7 +1613,7 @@ textarea.form-control, textarea.form-control:focus {
     width: 30px;
     height: 30px;
     background-color: #222;
-    color: #5050f5;
+    color: #0ba376;
     text-align: center;
     line-height: 30px;
     -webkit-transition: all 0.3s ease-in-out;
@@ -1875,7 +1871,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .ajax-page-nav > div.nav-item a:hover {
-    background-color: #5050f5;
+    background-color: #0ba376;
     color: #fff;
 }
 
@@ -1934,7 +1930,7 @@ textarea.form-control, textarea.form-control:focus {
 }
 
 .project-general-info .fa {
-    color: #5050f5;
+    color: #0ba376;
     margin-right: 5px;
 }
 
@@ -1966,8 +1962,8 @@ textarea.form-control, textarea.form-control:focus {
 
 .share-buttons a:hover {
     color: #fff;
-    background-color: #5050f5;
-    border-color: #5050f5;
+    background-color: #0ba376;
+    border-color: #0ba376;
 }
 
 .share-buttons a:last-child {
@@ -2392,7 +2388,7 @@ blockquote {
         height: 48px;
         line-height: 46px;
         text-align: center;
-        background-color: #5050f5;
+        background-color: #0ba376;
         right: 10px;
         font-size: 19px;
         top: 10px;
@@ -2481,7 +2477,7 @@ blockquote {
         right: 10px;
         bottom: 10px;
         padding: 5px 0;
-        border: 2px solid #5050f5;
+        border: 2px solid #0ba376;
     }
 
     .lmpixels-arrows-nav div {
@@ -2672,7 +2668,7 @@ blockquote {
     content: '';
     height: 2px;
     margin-top: 0;
-    background-color: #5050f5;
+    background-color: #0ba376;
     position: absolute;
     left: 0;
     bottom: -3px;
@@ -2892,7 +2888,7 @@ blockquote {
 .fun-fact i {
     position: relative;
     font-size: 33px;
-    color: #5050f5;
+    color: #0ba376;
     margin-bottom: 6px;
     width: 33px;
     height: 33px;
@@ -2903,7 +2899,7 @@ blockquote {
     font-weight: 400;
     display: block;
     margin: 10px 0;
-    color: #5050f5;
+    color: #0ba376;
 }
 
 .fun-fact-block-value {
@@ -2934,6 +2930,7 @@ blockquote {
         font-size: 18px;
     }
 }
+
 
 .message-sent {
     border: white solid 1px;
